--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -250,6 +250,40 @@
 			// }
 		}
 	}
+
+	// Search
+	&--search {
+		min-height: rem(280);
+		.headerBlock {
+			&__input-wrap {
+				position: relative;
+				max-width: rem(426);
+				margin-left: auto;
+				margin-right: auto;
+				.icon {
+					position: absolute;
+					right: 0;
+					top: 50%;
+					transform: translateY(calc(-50% - #{rem(14)}));
+					font-size: rem(24);
+				}
+				p {
+					font-size: rem(13);
+					font-weight: 300;
+					color: #ACB4C0;
+					margin-bottom: 0;
+				}
+			}
+			&__input {
+				border: none;
+				border-bottom: 1px solid #7E7D85;
+				font-size: rem(20);
+				font-weight: 300;
+				margin-bottom: rem(8);
+				padding-right: rem(25);
+			}
+		}
+	}
 	@include media-breakpoint-up(xl) {
 	}
 
