--- a/sourse/pug/pages/07-service-2.pug
+++ b/sourse/pug/pages/07-service-2.pug
@@ -17,6 +17,7 @@ include ../blocks/sResourceBase/_sResourceBase.pug
 include ../blocks/sWorkConditions/_sWorkConditions.pug
 include ../blocks/sTechnology/_sTechnology.pug
 include ../blocks/sJoin/_sJoin.pug 
+include ../blocks/sHistory/_sHistory.pug 
 include ../blocks/sForm/_sForm.pug
 include ../blocks/footer/_footer.pug
 
@@ -40,6 +41,7 @@ block pagecontent
 	+sResourceBase.bg-dark.section--vh
 	+sWorkConditions2.bg-white.section--vh
 	+sTechnology.bg-white.section--vh
+	+sHistory.bg-dark.section--vh
 	+sService.bg-white
 	//- +sPrinciples.bg-white.section--vh
 	//- +sWorkConditions.bg-dark.section--vh
