--- a/sourse/pug/pages/04-press-center.pug
+++ b/sourse/pug/pages/04-press-center.pug
@@ -12,7 +12,7 @@ include ../blocks/sAboutCaption/_sAboutCaption.pug
 include ../blocks/sStatus/_sStatus.pug
 include ../blocks/sNews/_sNews.pug
 include ../blocks/sEventsList/_sEventsList.pug
-include ../blocks/sJoin/_sJoin.pug 
+include ../blocks/sCaptionBlock/_sCaptionBlock.pug 
 include ../blocks/sForm/_sForm.pug
 include ../blocks/footer/_footer.pug
 
@@ -34,7 +34,7 @@ block pagecontent
 	+sNewsPressCenter.bg-white.section--vh
 	+sEventsList.bg-dark.section--vh
 	//- +sStatus.bg-white.section--vh
-
+	+sCaptionBlockPress.bg-white
 	+footer().bg-dark
       
 
