--- a/sourse/pug/blocks/sCaptionBlock/_sCaptionBlock.scss
+++ b/sourse/pug/blocks/sCaptionBlock/_sCaptionBlock.scss
@@ -55,15 +55,15 @@
 				z-index: 3;
 			}
 		}
-		&::before{
-			@include media-breakpoint-down(md){
+		&::before {
+			@include media-breakpoint-down(md) {
 				position: absolute;
-				content:'';
+				content: "";
 				height: 100%;
 				width: 100%;
 				left: 0;
 				top: 0;
-				background: linear-gradient(180deg, rgba(239,137,47,0.1) 0%, rgba(239,137,47,0.5) 100%);
+				background: linear-gradient(180deg, rgba(239, 137, 47, 0.1) 0%, rgba(239, 137, 47, 0.5) 100%);
 				z-index: 2;
 			}
 		}
@@ -83,11 +83,16 @@
 		@include media-breakpoint-up(md) {
 			padding-right: rem(60);
 			padding-left: rem(60);
+			width: 50%;
+			min-width: 50%;
 		}
 		padding-left: rem(16);
 		padding-right: rem(16);
 		padding-top: rem(32);
 		padding-bottom: rem(32);
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
 	}
 	h2 {
 		margin-bottom: 0;
@@ -110,6 +115,42 @@
 		font-weight: 300;
 		font-size: rem(18);
 		line-height: calc(24 / 18);
+	}
+	&__link-soc {
+		margin-top: rem(16);
+		font-weight: 300;
+		font-size: rem(18);
+		line-height: calc(24 / 18);
+		color: #08080b !important;
+		display: inline-block;
+	}
+	&--work{
+		.sCaptionBlock__wrap{
+			@include media-breakpoint-up(xxl){
+				padding-left: rem(82);
+				padding-right: rem(82);
+			}
+		}
+	}
+	p{
+		margin-top: rem(16);
+		font-weight: 300;
+		font-size: rem(18);
+		line-height: calc(24 / 18);
+	}
+	&__link{
+		margin-top: rem(16);
+		font-weight: 300;
+		font-size: rem(18);
+		line-height: calc(24 / 18);
+		display: inline-block;
+		span{
+			margin-right: rem(8);
+		}
+		.icon{
+			font-size: rem(6);
+			stroke: currentColor;
+		}
 	}
 	@include media-breakpoint-up(xl) {
 	}
