--- a/sourse/pug/pages/05-work.pug
+++ b/sourse/pug/pages/05-work.pug
@@ -12,7 +12,7 @@ include ../blocks/sNumericalIndicators/_sNumericalIndicators.pug
 include ../blocks/sStatus/_sStatus.pug
 include ../blocks/sPrinciples/_sPrinciples.pug
 include ../blocks/sWorkConditions/_sWorkConditions.pug
-include ../blocks/sJoin/_sJoin.pug 
+include ../blocks/sCaptionBlock/_sCaptionBlock.pug 
 include ../blocks/sForm/_sForm.pug
 include ../blocks/footer/_footer.pug
 
@@ -35,6 +35,7 @@ block pagecontent
 	+sNumericalIndicators.bg-dark.section--vh
 	+sPrinciples.bg-white.section--vh
 	+sWorkConditions.bg-dark.section--vh
+	+sCaptionBlockWork.bg-white
 	//- +sStatus.bg-white.section--vh
 
 	+footer().bg-dark
