--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -83,3 +83,8 @@ mixin headerSearch(name)
 			+input('Поиск', 'text', '')
 				+icon('search')
 				p Найдено 27 результатов
+				+e.found
+					a(href="#") Управление поставщиками
+					a(href="#") Управление жизненным циклом продукции
+					a(href="#") Управление активами предприятия
+					a(href="#") Управление поставщиками и предприятиями
