--- a/sourse/pug/blocks/sSearchResult/_sSearchResult.scss
+++ b/sourse/pug/blocks/sSearchResult/_sSearchResult.scss
@@ -5,7 +5,7 @@
 	// --sTPB: #{rem()};
 	position: relative;
 	@include media-breakpoint-up(lg) {
-		--sPT: #{rem(70)};
+		--sPT: #{rem(49)};
 		--sPB: #{rem(70)};
 	}
 	&__row{
@@ -13,9 +13,28 @@
 		// --bs-gutter-y: #{rem()};
 
 	}
+	&__slider {
+		overflow: visible;
+		top: 0;
+		// top: -83px;
+    height: 40px;
+		left: 0;
+		position: relative;
+		margin-top: -61px;
+		@include media-breakpoint-up(xl) {
+			margin-top: -97px;
+		}
+		@include media-breakpoint-up(lg) {
+			margin-top: -83px;
+		}
+		@include media-breakpoint-up(md) {
+			left: 36px;
+		}
+	}
 	&__slide{
-		width: max-content;
-		&.active {
+		// width: max-content;
+		width: auto;
+		&.active, &:hover {
 			.sSearchResult__item {
 				color: $primary;
 				&:after {
@@ -24,18 +43,8 @@
 			}
 		}
 	}
-	&__slider {
-		overflow: visible;
-		top: -36px;
-    height: 36px;
-		left: 0;
-		position: absolute;
-		@include media-breakpoint-up(md) {
-			left: 36px;
-		}
-	}
 	&__item {
-		width: max-content;
+		// width: max-content;
 		@include mt;
 		padding: 0 21px;
 		position: relative;
@@ -59,27 +68,35 @@
 		flex-wrap: wrap;
 		// justify-content: center;
 		gap: 16px 8px;
-	}
-	&__tag {
-		font-size: 10px;
-		font-weight: 300;
-		padding: 1px 7.5px;
-		border: 0.5px solid $primary;
-		border-radius: 35px;
-		color: $primary;
-		// &:not(:last-child) {
-		// 	margin-right: 8px;
-		// }
+		position: relative;
+		z-index: 3;
+		a {
+			font-size: 10px;
+			font-weight: 300;
+			padding: 1px 7.5px;
+			border: 0.5px solid $primary;
+			border-radius: 35px;
+			color: $primary;
+			&:hover {
+				color: $white;
+				background-color: $primary;
+			}
+			// &:not(:last-child) {
+			// 	margin-right: 8px;
+			// }
+		}
 	}
 	&__link {
 		color: #08080B;
 		padding: rem(24) 0;
 		border-bottom: 1px solid #E3E7EC;
 		display: block;
-		h4, p {
+		position: relative;
+		.h4, p {
 			margin-bottom: rem(16);
 		}
 		p {
+			// @include ellips;
 			font-size: rem(13);
 			font-weight: 300;
 			color: $secondary;
@@ -88,6 +105,27 @@
 			img {
 				filter: grayscale(0);
 			}
+		}
+		&--2 {
+			h4 {
+				margin-bottom: rem(8);
+			}
+			.subTextImg {
+				margin-bottom: rem(16);
+			}
+		}
+	}
+	&__reference {
+		&::before {
+			content: '';
+			position: absolute;
+			display: block;
+			width: 100%;
+			height: 100%;
+			background-color: transparent;
+			top: 0;
+			left: 0;
+			z-index: 2;
 		}
 	}
 	&__row {
@@ -116,6 +154,67 @@
 			width: 100%;
 			height: 100%;
 			filter: grayscale(1);
+		}
+	}
+	&__date {
+		font-size: rem(13);
+		font-weight: 300;
+		color: $secondary;
+		margin-bottom: rem(16);
+		&--2 {
+			color: #08080B;
+		}
+	}
+	&__btn {
+		width: 100%;
+		margin-top: rem(16);
+		font-size: rem(13);
+		font-weight: 300;
+		color: $white;
+		position: relative;
+		z-index: 3;
+		@include media-breakpoint-up(md) {
+			max-width: rem(121);
+		}
+	}
+	&__category {
+		text-transform: uppercase;
+		font-size: rem(12);
+		font-weight: 500;
+		color: #08080B;
+		margin-bottom: rem(8);
+	}
+	&__nothing {
+		color: $secondary;
+		font-weight: 300;
+		margin-bottom: 0;
+		text-align: center;
+		max-width: rem(592);
+		margin-left: auto;
+		margin-right: auto;
+		padding: 153px 0;
+		margin-top: 61px;
+		@include media-breakpoint-up(xl) {
+			margin-top: 97px;
+		}
+		@include media-breakpoint-up(lg) {
+			padding: 153px 0;
+			margin-top: 83px;
+		}
+	}
+	&__showMore {
+		color: $primary;
+		display: flex;
+    justify-content: center;
+    align-items: center;
+		padding-top: rem(40);
+		@include media-breakpoint-up(md) {
+			padding-top: rem(56);
+		}
+		.icon {
+			flex: 0 0 auto;
+			margin-left: rem(6);
+			font-size: rem(16);
 		}
 	}
 	@include media-breakpoint-up(xl) {}
