--- a/sourse/pug/pages/15-search-result.pug
+++ b/sourse/pug/pages/15-search-result.pug
@@ -38,7 +38,7 @@ block pagecontent
 	//- +sPrinciples.bg-white.section--vh
 	//- +sWorkConditions.bg-dark.section--vh
 	//- +sStatus.bg-white.section--vh
-	+sSearchResult().bg-white.section--vh
+	+sSearchResult().bg-white
 	+footer().bg-dark
       
 
