--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -7,6 +7,7 @@ mixin allcss()
 	
 	link(href="libs/swiper/swiper-bundle.min.css", rel="stylesheet")
 	link(href="libs/@fancyapps/ui/fancybox.css", rel="stylesheet")
+	link(href="libs/aos/aos.css", rel="stylesheet")
 	//- link(href=`css/main.min.css?v=${version}`, rel="stylesheet")
 	link(href=`css/main.min.css`, rel="stylesheet")
 
