--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -21,5 +21,7 @@ mixin allcjs()
 	script(src="libs/gsap/ScrollTrigger.min.js") 
 	script(src="libs/gsap/gsap.min.js") 
 	script(src="libs/aos/aos.js") 
+	//- script(src="libs/chart.js/helpers.esm.js") 
+	script(src="libs/chart.js/chart.min.js") 
 	//- script(src=`js/common.js?v=${version}`)
 	script(src=`js/common.js`)
