--- a/sourse/pug/pages/02-about.pug
+++ b/sourse/pug/pages/02-about.pug
@@ -13,6 +13,7 @@ include ../blocks/sStatus/_sStatus.pug
 include ../blocks/sTrust/_sTrust.pug
 include ../blocks/sJoin/_sJoin.pug 
 include ../blocks/sForm/_sForm.pug
+include ../blocks/sTeam/_sTeam.pug
 include ../blocks/footer/_footer.pug
 
 block variables
@@ -29,9 +30,10 @@ block pagecontent
 			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
-	+headerBlockBody('About',`О нас`,`Группа компаний САПРАН специализируется на&nbsp;внедрении ИТ-решений для бизнеса на&nbsp;платформе SAP`,'right').bg-dark.section--vh
-	+sAboutPerson.bg-white.section--vh
-	+sAboutCaption.bg-white.section--vh
+	//- +headerBlockBody('About',`О нас`,`Группа компаний САПРАН специализируется на&nbsp;внедрении ИТ-решений для бизнеса на&nbsp;платформе SAP`,'right').bg-dark.section--vh
+	//- +sAboutPerson.bg-white.section--vh
+	//- +sAboutCaption.bg-white.section--vh
+	+sTeam.bg-dark.section--vh
 	+sStatus.bg-white.section--vh
 	//- +sNews.bg-white.section--vh
 	//- +sEvents.bg-dark.section--vh
