--- a/sourse/pug/pages/02-about.pug
+++ b/sourse/pug/pages/02-about.pug
@@ -30,9 +30,9 @@ block pagecontent
 			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
-	//- +headerBlockBody('About',`О нас`,`Группа компаний САПРАН специализируется на&nbsp;внедрении ИТ-решений для бизнеса на&nbsp;платформе SAP`,'right').bg-dark.section--vh
-	//- +sAboutPerson.bg-white.section--vh
-	//- +sAboutCaption.bg-white.section--vh
+	+headerBlockBody('About',`О нас`,`Группа компаний САПРАН специализируется на&nbsp;внедрении ИТ-решений для бизнеса на&nbsp;платформе SAP`,'right').bg-dark.section--vh
+	+sAboutPerson.bg-white.section--vh
+	+sAboutCaption.bg-white.section--vh
 	+sTeam.bg-dark.section--vh
 	+sStatus.bg-white.section--vh
 	+sCaptionBlock.bg-white
