edit 10-experience page

--- a/sourse/pug/blocks/form-wrap/form-wrap.pug
+++ b/sourse/pug/blocks/form-wrap/form-wrap.pug
@@ -35,12 +35,14 @@ mixin input(placeholder,  t='text', label= placeholder, name= t)
 mixin select(label,pl,...items)
 	+e.input-wrap.form-group
 		label
-			+e.SPAN.title= label
+			if label
+				+e.SPAN.title= label
 			+e.SELECT.input.form-control&attributes(attributes)
 
 					option()= pl
 					each item in items
 						option()= item
+			block
 
 //- wrapper for form
 mixin form-wrap(inp)
