--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -100,6 +100,7 @@
 	&__row {
 		--bs-gutter-x: 0;
 		min-height: calc(100vh - 48px);
+		width: 100%;
 		@include media-breakpoint-up(xl) {
 			min-height: calc(100vh - 56px);
 		}
