--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -39,11 +39,19 @@
 	font-size:math.div(32,10)*1rem;
 	width: math.div(32,32)*1em;
 }
+.icon-close {
+	font-size:math.div(25,10)*1rem;
+	width: math.div(24,25)*1em;
+}
 .icon-facebook {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
 .icon-fb {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
+.icon-filter {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
