--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -138,6 +138,8 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sTrust/_sTrust';
 @import '../pug/blocks/sJoin/_sJoin'; 
 @import '../pug/blocks/sSearchResult/_sSearchResult'; 
+@import '../pug/blocks/s404/_s404'; 
+@import '../pug/blocks/sExperience/_sExperience'; 
 
 @import "media"; // Всегда в конце
 
