sExpert slider in work

--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -39,6 +39,10 @@
 	font-size:math.div(32,10)*1rem;
 	width: math.div(32,32)*1em;
 }
+.icon-cup {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-facebook {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
@@ -52,6 +56,10 @@
 	width: math.div(24,24)*1em;
 }
 .icon-linkedin {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
+.icon-medal {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
