--- a/sourse/pug/pages/02-about.pug
+++ b/sourse/pug/pages/02-about.pug
@@ -12,6 +12,7 @@ include ../blocks/sAboutCaption/_sAboutCaption.pug
 include ../blocks/sStatus/_sStatus.pug
 include ../blocks/sTrust/_sTrust.pug
 include ../blocks/sCaptionBlock/_sCaptionBlock.pug 
+include ../blocks/sExpert/_sExpert.pug
 include ../blocks/sForm/_sForm.pug
 include ../blocks/footer/_footer.pug
 
@@ -33,7 +34,9 @@ block pagecontent
 	+sAboutPerson.bg-white.section--vh
 	+sAboutCaption.bg-white.section--vh
 	+sStatus.bg-white.section--vh
+	+sExpert.bg-dark.section--vh
 	+sCaptionBlock.bg-white
+	
 	//- +sNews.bg-white.section--vh
 	//- +sEvents.bg-dark.section--vh
 	//- +sWays.bg-white.section--vh
