--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -126,6 +126,7 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sFocus/_sFocus.scss';
 @import '../pug/blocks/sPrinciples/_sPrinciples.scss';
 @import '../pug/blocks/sWorkConditions/_sWorkConditions.scss';
+@import '../pug/blocks/sExpert/_sExpert.scss';
 
 @import '../pug/blocks/header/_header.scss';
 @import '../pug/blocks/footer/_footer.scss';
