edit 10-experience page

--- a/sourse/pug/blocks/sExperience/_sExperience.pug
+++ b/sourse/pug/blocks/sExperience/_sExperience.pug
@@ -29,10 +29,8 @@ mixin sExperience(data)
 		+e.content
 			+icon('close')
 			p Фильтр
-			+select('', 'Выберите отрасль', 'Финансы', 'Сеть и управление расходами', 'Управление цепочками поставок', 'Взаимоотношение с клиентами и клиентский опыт')
-				+icon('chevron-down')
-			+select('', 'Выберите отрасль', 'Финансы', 'Сеть и управление расходами', 'Управление цепочками поставок', 'Взаимоотношение с клиентами и клиентский опыт')
-				+icon('chevron-down')
+			+select('', 'Выберите отрасль', 'Финансы', 'Сеть и управление расходами', 'Управление цепочками поставок', 'Взаимоотношение с клиентами и клиентский опыт').js-choice
+			+select('', 'Выберите отрасль', 'Финансы', 'Сеть и управление расходами', 'Управление цепочками поставок', 'Взаимоотношение с клиентами и клиентский опыт').js-choice2
 			+e.confrim(href="#").btn.btn-primary Применить
 	+b.SECTION.sExperience.section#sExperience&attributes(attributes)
 		+sExperienceItem('sExperience-bg-1.jpg', 'Infinbank.svg', 'Банки', 'Программа проектов &laquo;Реновация&raquo; цифровой трансформации банка InfinBank', 'Управление цепочками поставок, Взаимоотношения с&nbsp;клиентами и&nbsp;клиентский опыт')
