--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -5,6 +5,8 @@ mixin allcss()
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 	
+	link(href="libs/choices.js/public/assets/styles/choices.min.css", rel="stylesheet")
+	//- link(href="libs/choices.js/public/assets/styles/base.min.css", rel="stylesheet")
 	link(href="libs/swiper/swiper-bundle.min.css", rel="stylesheet")
 	link(href="libs/@fancyapps/ui/fancybox.css", rel="stylesheet")
 	link(href="libs/aos/aos.css", rel="stylesheet")
@@ -18,6 +20,7 @@ mixin allcjs()
 	script(src="libs/@fancyapps/ui/fancybox.umd.js") 
 	script(src="libs/swiper/swiper-bundle.min.js")  
 	script(src="libs/inputmask/inputmask.min.js") 
+	script(src="libs/choices.js/public/assets/scripts/choices.min.js") 
 
 	script(src="libs/gsap/ScrollTrigger.min.js") 
 	script(src="libs/gsap/gsap.min.js") 
