--- a/sourse/pug/blocks/sResourceBase/_sResourceBase.pug
+++ b/sourse/pug/blocks/sResourceBase/_sResourceBase.pug
@@ -2,8 +2,39 @@ mixin sResourceBase(data)
 	// start sResourceBase
 	+b.SECTION.sResourceBase.section#sResourceBase&attributes(attributes)
 		.container
-			+b.section-title.text-center
-				h2 sResourceBase
-				
-			.row
+			+b.section-title
+				h2 Ресурсная база – концепция единого центра разработки клиента
+			+e.list
+				+e.item
+					+e.number 01
+					+e.item-info
+						+e.item-title Регионы присутствия 
+						+e.text Москва, Санкт-Петербург, Пермь, Волгоград, Самара, Старый Оскол, Казань
+				+e.item
+					+e.number 02
+					+e.item-info
+						+e.item-title Регионы присутствия 
+						+e.text Компания SAPRUN и&nbsp;её&nbsp;окружение входит в&nbsp;один из&nbsp;крупнейших российских ИТ-холдингов INLINE Technologies Group
+				+e.item
+					+e.number 03
+					+e.item-info
+						+e.item-title Корпоративный университет
+						+e.text Ежегодно ряды компании пополняются десятками молодых специалистов&nbsp;&mdash; выпускниками ведущих технических вузов, которые проходят обучение по&nbsp;выбранной специальности. Обучение проводят собственные и&nbsp;приглашенные эксперты
+				+e.item
+					+e.number 04
+					+e.item-info
+						+e.item-title Команда
+						+e.text Консолидированная экспертиза&nbsp;&mdash; стабильная и&nbsp;замотивированная команда разработчиков в&nbsp;шаговой доступности с&nbsp;различными знаниями и&nbsp;опытом. Возможность оперативной замены сотрудника в&nbsp;случае форс-мажора.
+				+e.item
+					+e.number 05
+					+e.item-info
+						+e.item-title Задачи
+						+e.text
+							ul
+								li Обеспечить единый подход к&nbsp;разработке
+								li Обеспечить высокий уровень доступности специалистов
+								li Минимизировать риски сдвига сроков и&nbsp;увеличения бюджета разработок.
+								li Обеспечить прозрачность ведения разработок на&nbsp;протяжении всего жизненного цикла продукта
+								li Обеспечить контроль качества и&nbsp;повысить отказоустойчивость реализуемых разработок
+								li Формировать адекватную команду, соответствующую ожиданиям и&nbsp;потребностям Заказчика
 	// end sResourceBase
