--- a/sourse/pug/blocks/sHistory/_sHistory.scss
+++ b/sourse/pug/blocks/sHistory/_sHistory.scss
@@ -2,27 +2,213 @@
 .sHistory {
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
-	// --sTPB: #{rem()};
-	&__row{
+	--sTPB: #{rem(32)};
+	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
-
 	}
-	.section-title{
-		
+	.section-title {
 	}
-	&__col{
-
+	&__col {
 	}
-	&__item{
-
+	&__item {
 	}
-
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-between(md, xl) {}
-	@include media-breakpoint-only(xl) {}
-	@include media-breakpoint-down(xl) {}
+	h2 {
+		margin-bottom: 0;
+	}
+	&__wrap {
+		@include media-breakpoint-up(md) {
+			flex-direction: row-reverse;
+			flex-wrap: wrap-reverse;
+			padding-left: rem(50);
+			margin-left: rem(-40);
+			margin-right: rem(-40);
+		}
+		@include media-breakpoint-up(xxl) {
+			margin-left: rem(-75);
+			margin-right: rem(-75);
+		}
+		display: flex;
+		flex-direction: column-reverse;
+	}
+	&__item {
+		@include media-breakpoint-up(xxl) {
+			padding-left: rem(75);
+			padding-right: rem(75);
+		}
+		@include media-breakpoint-up(md) {
+			width: 25%;
+			padding-left: rem(40);
+			padding-right: rem(40);
+			padding-bottom: rem(50);
+			height: rem(184);
+		}
+		@include media-breakpoint-down(md) {
+			padding-top: rem(24);
+			padding-left: rem(24);
+			&:last-child {
+				padding-top: 0;
+			}
+		}
+		position: relative;
+		&::after {
+			content: "";
+			position: absolute;
+			@include media-breakpoint-up(md) {
+				width: 100%;
+				height: 1px;
+				// width: 1px;
+				// height: 100%;
+				top: rem(32);
+				left: 0;
+				background-image: url("../img/svg/border-bg-2.svg");
+			}
+			@include media-breakpoint-down(md){
+				height: 100%;
+				width: 1px;
+				background-image: url("../img/svg/border-bg-3.svg");
+				top: rem(24);
+				left: 4px;
+			}
+		}
+		&:nth-child(4n + 1) {
+			&::after {
+				@include media-breakpoint-up(md) {
+					width: calc(100% - rem(40));
+					height: 1px;
+					// width: 1px;
+					// height: 100%;
+					top: rem(32);
+					left: 0;
+					background-image: url("../img/svg/border-bg-2.svg");
+				}
+				@include media-breakpoint-up(xxl){
+					width: calc(100% - rem(75))
+				}
+			}
+		}
+		&:nth-child(5){
+			&::before{
+				@include media-breakpoint-up(md){
+					content:'';
+					position: absolute;
+					// height: rem(55);
+					height: calc(50% + 25px);
+					width: 1px;
+					background-image: url('../img/svg/border-bg-3.svg');
+					right: rem(40);
+					bottom: calc(100% - rem(32));
+				}
+				@include media-breakpoint-up(xxl){
+					right: rem(75);
+				}
+			}
+		}
+		&:nth-child(9){
+			&::before{
+				@include media-breakpoint-up(md){
+					content:'';
+					position: absolute;
+					// height: rem(55);
+					height: calc(50% + 25px);
+					width: 1px;
+					background-image: url('../img/svg/border-bg-3.svg');
+					right: rem(40);
+					// bottom: calc(100% - rem(32));
+					top: rem(32);
+				}
+				@include media-breakpoint-up(xxl){
+					right: rem(75);
+				}
+			}
+		}
+		&:nth-child(4){
+			&::before{
+				@include media-breakpoint-up(md){
+					content:'';
+					position: absolute;
+					// height: rem(55);
+					height: calc(50% + 25px);
+					width: 1px;
+					background-image: url('../img/svg/border-bg-3.svg');
+					left: rem(0);
+					bottom: calc(100% - rem(32));
+				}
+				@include media-breakpoint-up(xxl){
+					left: rem(3);
+				}
+			}
+		}
+		&:nth-child(8){
+			&::before{
+				@include media-breakpoint-up(md){
+					content:'';
+					position: absolute;
+					// height: rem(55);
+					height: 50%;
+					width: 1px;
+					background-image: url('../img/svg/border-bg-3.svg');
+					left: rem(0);
+					// bottom: calc(100% - rem(32));
+					top: rem(32);
+				}
+				@include media-breakpoint-up(xxl){
+					left: rem(3);
+				}
+			}
+		}
+	}
+	&__item-year {
+		font-weight: 600;
+		font-size: rem(16);
+		line-height: calc(24 / 18);
+		color: $primary;
+		margin-bottom: rem(8);
+		@include media-breakpoint-up(md) {
+			margin-bottom: rem(24);
+		}
+		position: relative;
+		&::before {
+			content: "";
+			width: 8px;
+			height: 8px;
+			background-color: $white;
+			border-radius: 50%;
+			position: absolute;
+			@include media-breakpoint-up(md) {
+				top: rem(29);
+				// left: rem(40);
+				left: 0;
+			}
+			@include media-breakpoint-up(xxl) {
+				// left: rem(75);
+			}
+			@include media-breakpoint-down(md){
+				top: rem(8);
+				left: rem(-24);
+			}
+		}
+	}
+	&__item-text {
+		@include media-breakpoint-up(md) {
+			max-width: rem(158);
+		}
+		font-size: rem(13);
+		line-height: calc(16 / 13);
+		font-weight: 300;
+	}
+	@include media-breakpoint-up(xl) {
+	}
+	@include media-breakpoint-up(lg) {
+	}
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-between(md, xl) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+	@include media-breakpoint-down(xl) {
+	}
 } // end.sHistory
