edit 15-search-result and 10-experiance page

--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -20,6 +20,7 @@ mixin allcjs()
 	script(src="libs/@fancyapps/ui/fancybox.umd.js") 
 	script(src="libs/swiper/swiper-bundle.min.js")  
 	script(src="libs/inputmask/inputmask.min.js") 
+	script(src="libs/choices.js/public/assets/scripts/choices.min.js") 
 
 	script(src="libs/gsap/ScrollTrigger.min.js") 
 	script(src="libs/gsap/gsap.min.js") 
