--- a/sourse/pug/blocks/sSearchResult/_sSearchResult.pug
+++ b/sourse/pug/blocks/sSearchResult/_sSearchResult.pug
@@ -43,25 +43,25 @@ mixin sSearchResult(data)
 		.container.tabs
 			+e.slider--js.swiper(data-aos="fade-up" data-aos-delay="300")
 				.swiper-wrapper.tabs__caption
-					+e.slide.swiper-slide.tabs__btn.active
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn.active
 						+e.item По тегу
-					+e.slide.swiper-slide.tabs__btn
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
 						+e.item Услуги
-					+e.slide.swiper-slide.tabs__btn
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
 						+e.item Направления
-					+e.slide.swiper-slide.tabs__btn
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
 						+e.item Технологии
-					+e.slide.swiper-slide.tabs__btn
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
 						+e.item Подходы
-					+e.slide.swiper-slide.tabs__btn
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
 						+e.item Новости
-					+e.slide.swiper-slide.tabs__btn
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
 						+e.item Публикации
-					+e.slide.swiper-slide.tabs__btn
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
 						+e.item Мероприятия
-					+e.slide.swiper-slide.tabs__btn
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
 						+e.item Проекты
-					+e.slide.swiper-slide.tabs__btn
+					+e.slide.swiper-slide.btn-aos-refresh.tabs__btn
 						+e.item Нечего не найдено
 			.tabs__content.active
 				+sSearchResultItem('sSearch-img-8.jpg', 'Сотрудники ИНВИТРО ставят цели и&nbsp;планируют развитие с&nbsp;помощью SAP SuccessFactors', 'По&nbsp;данным аналитического центра TAdviser, САПРАН Групп занял шестое место в&nbsp;рейтинге &laquo;Крупнейшие поставщики BI-решений в&nbsp;России 2020&raquo;...', '', 'НОВОСТЬ', '', '', true, '#управление компании', '#жизнь компании')
@@ -73,7 +73,7 @@ mixin sSearchResult(data)
 				+sSearchResultItem('sSearch-img-9.jpg', 'Завершено внедрение решения по&nbsp;управлению персоналом для Группы НЛМК', 'Компания SAPRUN Group завершила внедрение решения по&nbsp;управлению персоналом на&nbsp;базе SAP ERP Human Capital Management для Группы НЛМК', '', 'МЕРОПРИЯТИЕ', '12 сентября 2022', 'Хочу пойти', true, '#управление компании', '#новости команды')
 				+sSearchResultItem2('sSearch-img-11.jpg', 'Банки', 'Программа проектов «Реновация» цифровой трансформации банка InfinBank', 'Управление цепочками поставок, Взаимоотношения с клиентами и клиентский опыт', 'Infinbank-black.svg', true, '#жизнь компании', '#новости команды', '#жизнь компании')
 				+sSearchResultItem2('sSearch-img-12.jpg', 'Нефть и газ', 'Управление программой IT-деятельности компании на&nbsp;базе SAP BPC&nbsp;NW', 'Взаимоотношения с клиентами и клиентский опыт', 'trans.svg', true, '#жизнь компании', '#новости команды', '#жизнь компании')
-				+e.showMore(href="#")
+				+e.showMore(href="#" data-aos="fade-up" data-aos-delay="300")
 					| Показать ещё
 					+icon('chevron-down')
 			.tabs__content
@@ -85,7 +85,7 @@ mixin sSearchResult(data)
 				+sSearchResultItem('sSearch-img-6.jpg', 'Управление поставщиками' , 'Автоматизация процессов регистрации, квалификации, сегментации, а&nbsp;также контроль, Управление данными о&nbsp;поставщиках, их&nbsp;KPI, финансовой документацией, сертификатами и&nbsp;прочей информацией...', '', '', '', '', true, '#новости команды', '#жизнь компании')
 				+sSearchResultItem('article-img-1.jpg', 'Управление поставщиками' , 'Эффективное управление бизнес-процессами невозможно без быстрого и&nbsp;удобного доступа к&nbsp;данным о&nbsp;деятельности компании. Современные инструменты позволяют оптимизировать ключевые процессы: от&nbsp;производства, логистики и&nbsp;сбыта до&nbsp;закупок, управления персоналом, управления финансами и&nbsp;проектами.', '', '', '', '', true, '#управление компании')
 				+sSearchResultItem('sSearch-img-7.jpg', 'Управление поставщиками' , 'Эффективное управление бизнес-процессами невозможно без быстрого и&nbsp;удобного доступа к&nbsp;данным о&nbsp;деятельности компании. Современные инструменты позволяют оптимизировать ключевые процессы: от&nbsp;производства, логистики и&nbsp;сбыта до&nbsp;закупок, управления персоналом, управления финансами и&nbsp;проектами.', '', '', '', '', true, '#жизнь компании')
-				+e.showMore(href="#")
+				+e.showMore(href="#" data-aos="fade-up" data-aos-delay="300")
 					| Показать ещё услуги
 					+icon('chevron-down')
 			.tabs__content
@@ -97,7 +97,7 @@ mixin sSearchResult(data)
 				+sSearchResultItem('sSearch-img-4.jpg', 'Финансовый менеджмент', 'Эффективное управление бизнес-процессами невозможно без быстрого и&nbsp;удобного доступа к&nbsp;данным о&nbsp;деятельности компании. Современные инструменты позволяют оптимизировать ключевые процессы: от&nbsp;производства, логистики и&nbsp;сбыта до&nbsp;закупок, управления персоналом, управления финансами и&nbsp;проектами.', '', '', '', '', true, '#управление компании')
 				+sSearchResultItem('sSearch-img-4.jpg', 'Бухгалтерский учёт и финансовое закрытие', 'В&nbsp;том числе происходят переговоры между финансирующей проект организацией и&nbsp;прочими участниками. Затем они согласовывают и&nbsp;подписывают кредитную и&nbsp;обеспечительную документацию, включая прямое соглашение. На&nbsp;рисунке схематически изображено, когда происходит финансовое закрытие....', '', '', '', '', true, '#управление компании')
 				+sSearchResultItem('article-img-1.jpg', 'Финансовый менеджмент', 'Эффективное управление бизнес-процессами невозможно без быстрого и&nbsp;удобного доступа к&nbsp;данным о&nbsp;деятельности компании. Современные инструменты позволяют оптимизировать ключевые процессы: от&nbsp;производства, логистики и&nbsp;сбыта до&nbsp;закупок, управления персоналом, управления финансами и&nbsp;проектами.', '', '', '', '', true, '#управление компании')
-				+e.showMore(href="#")
+				+e.showMore(href="#" data-aos="fade-up" data-aos-delay="300")
 					| Показать ещё направления
 					+icon('chevron-down')
 			.tabs__content
@@ -117,7 +117,7 @@ mixin sSearchResult(data)
 				+sSearchResultItem('news-2.jpg', '«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов', 'Команда SAPRUN не&nbsp;только внедряет новые системы SAP, но&nbsp;и&nbsp;оперативно сопровождает тысячи пользователей в&nbsp;компаниях по&nbsp;всей стране....', '27 июня 2022', '', '', '', true, '#управление компании', '#новости команды', '#жизнь компании')
 				+sSearchResultItem('news-4.jpg', 'SAPRUN вошёл в&nbsp;TOP-5 крупнейших российских аутсорсеров поддержки решений SAP-2020', 'Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране....', '27 июня 2022', '', '', '', true, '#управление компании', '#новости команды', '#жизнь компании')
 				+sSearchResultItem('news-3.jpg', 'Онлайн-конференция «Инновационный день для фармацевтических компаний 2021»', 'Организаторами мероприятия 9&nbsp;декабря выступили компании SAP, SAPRUN и&nbsp;DSM Group (ведущее маркетинговое агентство в&nbsp;сфере исследований фармацевтического рынка) Saprun....', '27 июня 2022', '', '', '', true, '#управление компании', '#новости команды', '#жизнь компании')
-				+e.showMore(href="#")
+				+e.showMore(href="#" data-aos="fade-up" data-aos-delay="300")
 					| Показать ещё новости
 					+icon('chevron-down')
 			.tabs__content
@@ -129,7 +129,7 @@ mixin sSearchResult(data)
 				+sSearchResultItem('sSearch-img-8.jpg', 'Золотая награда SAP QUALITY AWARD 2017', 'Компания SAPRUN стала участником Большой встречи клуба первых лиц ритейла Redis Business Class. Традиционно мероприятие объединяет представителей топ-менеджмента и&nbsp;владельцев розничных компаний со&nbsp;всей России. В&nbsp;этом году встреча прошла 8&nbsp;сентября 2021 года в&nbsp;Центре цифрового лидерства SAP и&nbsp;собрала более...', '', 'Август 2022', '', '', true, '#управление компании', '#жизнь компании')
 				+sSearchResultItem('sSearch-img-8.jpg', 'SAPRUN Group представит решение для построения эффективной дистрибуторской сети', 'По данным аналитического центра TAdviser, САПРАН Групп занял шестое место в рейтинге "Крупнейшие поставщики BI-решений в России 2020"...', '', 'Май 2022', '', '', true, '#управление компании')
 				+sSearchResultItem('sSearch-img-8.jpg', '​Advanced Compliance Reporting', 'Компания SAPRUN стала участником Большой встречи клуба первых лиц ритейла Redis Business Class. Традиционно мероприятие объединяет представителей топ-менеджмента и&nbsp;владельцев розничных компаний со&nbsp;всей России...', '', 'Апрель 2022', '', '', true, '#управление компании', '#жизнь компании')
-				+e.showMore(href="#")
+				+e.showMore(href="#" data-aos="fade-up" data-aos-delay="300")
 					| Показать ещё публикации
 					+icon('chevron-down')
 			.tabs__content
@@ -141,7 +141,7 @@ mixin sSearchResult(data)
 				+sSearchResultItem('sSearch-img-9.jpg', 'Завершено внедрение решения по&nbsp;управлению персоналом для Группы НЛМК', 'Компания SAPRUN Group завершила внедрение решения по&nbsp;управлению персоналом на&nbsp;базе SAP ERP Human Capital Management для Группы НЛМК', '', '', '12 сентября 2022', 'Хочу пойти', true, '#управление компании', '#новости команды')
 				+sSearchResultItem('sSearch-img-10.jpg', 'Платформа S/4HANA запущена в&nbsp;Металлоинвест.', 'Проект реализовывался с&nbsp;участием SAPRUN Group. Впервые в&nbsp;России платформа S/4HANA внедрена в&nbsp;масштабе такой компании как Металлоинвест.', '', '', '21 сентября 2022', 'Хочу пойти', true, '#управление компании', '#новости команды', '#жизнь компании')
 				+sSearchResultItem('sSearch-img-3.jpg', 'Проект в&nbsp;&laquo;Сталепромышленной компании&raquo; получил Серебро в&nbsp;конкурсе SAP Quality Awards 2019', 'Проект в «Сталепромышленной компании» получил Серебро в конкурсе SAP Quality Awards 2019', '', '', '3 сентября 2022', 'Хочу пойти', true, '#управление компании')
-				+e.showMore(href="#")
+				+e.showMore(href="#" data-aos="fade-up" data-aos-delay="300")
 					| Показать ещё мероприятия
 					+icon('chevron-down')
 			.tabs__content
@@ -153,7 +153,7 @@ mixin sSearchResult(data)
 				+sSearchResultItem2('sSearch-img-12.jpg', 'Нефть и газ', 'Управление программой IT-деятельности компании на&nbsp;базе SAP BPC&nbsp;NW', 'Взаимоотношения с клиентами и клиентский опыт', 'trans.svg', true, '#жизнь компании', '#новости команды', '#жизнь компании')
 				+sSearchResultItem2('sSearch-img-13.jpg', 'Транспорт и логистика', 'Автоматизированная система управления ресурсами SAP ERP', 'Управление цепочками поставок, Взаимоотношения с клиентами и клиентский опыт', 'pulkovo.svg', true, '#жизнь компании', '#новости команды', '#жизнь компании')
 				+sSearchResultItem2('sSearch-img-14.jpg', 'Банки', 'Построение автоматизированной системы распределения операционных расходов', 'Сеть и управление расходами', 'sberbank.svg', true, '#жизнь компании', '#новости команды', '#жизнь компании')
-				+e.showMore(href="#")
+				+e.showMore(href="#" data-aos="fade-up" data-aos-delay="300")
 					| Показать ещё проекты
 					+icon('chevron-down')
 			.tabs__content
