add 08-internship page

--- a/sourse/pug/blocks/sExperience/_sExperience.pug
+++ b/sourse/pug/blocks/sExperience/_sExperience.pug
@@ -66,7 +66,7 @@ mixin sExperience(data)
 			+sExperienceListItem('100', 'Пользователей системы')
 			+sExperienceListItem('57', 'Отчетов Web Intelligence')
 			+sExperienceListItem('№1', 'Проект-победитель SAP Value Award 2018')
-		+e.showMore(href="#")(data-aos="fade-up" data-aos-delay="300")
+		+e.showMore(href="#" data-aos="fade-up" data-aos-delay="300")
 			| Показать ещё проекты
 			+icon('chevron-down')
 	// end sExperience
