--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -142,6 +142,7 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sSearchResult/_sSearchResult'; 
 @import '../pug/blocks/s404/_s404'; 
 @import '../pug/blocks/sExperience/_sExperience'; 
+@import '../pug/blocks/sDirections/_sDirections'; 
 
 @import "media"; // Всегда в конце
 
