--- a/sourse/pug/blocks/sExperience/_sExperience.scss
+++ b/sourse/pug/blocks/sExperience/_sExperience.scss
@@ -52,6 +52,21 @@
 			width: 100%;
 			height: 100%;
 		}
+		.map {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			filter: grayscale(1);
+			& > * {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+			}
+		}
 	}
 	&__wrap {
 		padding: rem(21) rem(16) rem(56);
@@ -151,6 +166,45 @@
 			flex: 0 0 auto;
 			margin-left: rem(7);
 			font-size: rem(16);
+		}
+	}
+	&--map {
+		.sExperience {
+			&__item {
+				background-color: #08080B;
+				color: #fff;
+				&:nth-child(odd) {
+					background-color: #fff;
+					color: #08080B;
+				}
+				&:nth-child(even) {
+					--link-color: #fff;
+				}
+			}
+			&__wrap {
+				display: flex;
+				flex-direction: column;
+				@include media-breakpoint-up(md) {
+					justify-content: center;
+				}
+				h2 {
+					margin-bottom: rem(14);
+				}
+				a {
+					font-weight: 300;
+					&:not(:last-of-type) {
+						margin-bottom: rem(14);
+					}
+					&:not(:hover) {
+						color: var(--link-color, #08080B);
+					}
+				}
+			}
+			&__sub-text {
+				font-weight: 300;
+				margin-bottom: rem(22);
+				max-width: rem(190);
+			}
 		}
 	}
 	@include media-breakpoint-up(xl) {}
