--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -22,6 +22,8 @@ mixin allcjs()
 	script(src="libs/inputmask/inputmask.min.js") 
 	script(src="libs/choices.js/public/assets/scripts/choices.min.js") 
 
+	script(src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c")
+
 	script(src="libs/gsap/ScrollTrigger.min.js") 
 	script(src="libs/gsap/gsap.min.js") 
 	script(src="libs/aos/aos.js") 
