--- a/sourse/pug/pages/12-offices.pug
+++ b/sourse/pug/pages/12-offices.pug
@@ -6,10 +6,9 @@ include ../blocks/top-nav/_top-nav.pug
 include ../blocks/headerBlock/_headerBlock.pug
 include ../blocks/sContent/_sContent.pug
 include ../blocks/sService/_sService.pug
- 
-include ../blocks/sNews/_sNews.pug
-include ../blocks/sDirections/_sDirections.pug
 
+include ../blocks/sExperience/_sExperience.pug
+ 
 //- include ../blocks/sContact/_sContact.pug 
 include ../blocks/sValueProposition/_sValueProposition.pug
 include ../blocks/sNumericalIndicators/_sNumericalIndicators.pug
@@ -25,7 +24,7 @@ block variables
 	- let  bg= null
 
 block title
-	- let  title= 'Стажировка в SAPRUN'
+	- let  title= 'Офисы'
 	title= title
 block pagecontent
 	+mob-mnu()
@@ -34,11 +33,9 @@ block pagecontent
 			source(src='video/video.mp4' type='video/mp4')
 	
 	+top-nav()
-	+headerBlockBody('Internship', 'Стажировка в SAPRUN', 'Стажерские программы&nbsp;&mdash; это отличная возможность для выпускников ВУЗов начать карьеру в&nbsp;САПРАН. Наших стажеров обучают лучшие эксперты компании. После обучения у&nbsp;них есть возможность сразу влиться в&nbsp;реальные проекты для ведущих российских компаний.', 'right').bg-dark.section--vh
-	+sDirections().bg-white.section--vh
-	+sNewsPressCenter.bg-white.section--vh
+	+headerBlockBody('Offices', 'Офисы', 'Компания объединяет профессионалов на&nbsp;рынке аналитических систем и&nbsp;интеграционных решений, сегодня в&nbsp;нашей команде более 300 сотрудников из&nbsp;офисов Москвы, Санкт-Петербурга, Перми.')
+	+sExperience2()
+	//- +sForm().bg-dark.section--vh
 	+footer().bg-dark
-      
-
 
 
