--- a/sourse/pug/blocks/sExperience/_sExperience.scss
+++ b/sourse/pug/blocks/sExperience/_sExperience.scss
@@ -58,13 +58,16 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			filter: grayscale(1);
-			& > * {
+			& >* {
 				position: absolute;
 				top: 0;
 				left: 0;
 				width: 100%;
 				height: 100%;
+			}
+			.ymaps-2-1-79-ground-pane {
+				filter: grayscale(1);
+
 			}
 		}
 	}
