--- a/sourse/pug/pages/04-press-center.pug
+++ b/sourse/pug/pages/04-press-center.pug
@@ -33,6 +33,7 @@ block pagecontent
 	+headerBlockBody('PressCenter',`Пресс-центр`,`В&nbsp;этом разделе вы&nbsp;можете ознакомиться с&nbsp;новостями САПРАН, прочитать статьи и&nbsp;интервью, подготовленные нашими специалистами.`,'right').bg-dark.section--vh
 	+sNewsPressCenter.bg-white.section--vh
 	+sEventsList.bg-dark.section--vh
+	+sNewsPublication.bg-white.section--vh
 	//- +sStatus.bg-white.section--vh
 	+sCaptionBlockPress.bg-white
 	+footer().bg-dark
