--- a/sourse/pug/blocks/sNews/_sNews.scss
+++ b/sourse/pug/blocks/sNews/_sNews.scss
@@ -45,7 +45,8 @@
 	}
 	@include media-breakpoint-down(xl) {
 	}
-	&--PressCenter {
+	&--PressCenter,
+	&--Publication {
 		@include media-breakpoint-up(lg) {
 			--sTPB: #{rem(16)};
 		}
@@ -78,6 +79,11 @@
 	.arrow-wrapper {
 		display: flex;
 	}
+	// &--Publication{
+	// 	.sNews--Publication__slider{
+	// 		padding-bottom: rem(84);
+	// 	}
+	// }
 } // end.sNews
 
 .new-item {
@@ -86,11 +92,11 @@
 	flex-direction: column;
 	&:not(:hover) {
 		color: $body-color;
-		img{
+		img {
 			filter: saturate(0);
 		}
 	}
-	img{
+	img {
 		@include mt;
 	}
 	&__img-wrap {
@@ -132,5 +138,48 @@
 	.icon {
 		font-size: rem(8);
 		stroke: currentColor;
+	}
+}
+
+.publ-item {
+	@include media-breakpoint-up(md) {
+		width: rem(268);
+		max-width: rem(268);
+		margin-bottom: rem(50);
+		&:nth-child(odd) {
+			margin-top: rem(84);
+		}
+	}
+	margin-bottom: rem(32);
+	width: rem(304);
+	max-width: calc(100vw - rem(56));
+	&__date {
+		color: $secondary;
+		font-weight: 300;
+		font-size: rem(13);
+		line-height: calc(16 / 13);
+		margin-bottom: rem(16);
+	}
+	picture {
+		img {
+			max-width: 100%;
+			max-height: 100%;
+			width: 100%;
+		}
+		filter: saturate(0);
+		&:hover {
+			filter: saturate(1);
+		}
+		transition-duration: 0.4s;
+		aspect-ratio: 267/333;
+		margin-bottom: rem(16);
+	}
+	&__caption {
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		font-weight: 500;
+		font-size: rem(12);
+		line-height: calc(16 / 12);
+		color: #08080b;
 	}
 }
