--- a/sourse/pug/pages/07-service-2.pug
+++ b/sourse/pug/pages/07-service-2.pug
@@ -16,6 +16,7 @@ include ../blocks/sOpportunities/_sOpportunities.pug
 include ../blocks/sResourceBase/_sResourceBase.pug
 include ../blocks/sWorkConditions/_sWorkConditions.pug
 include ../blocks/sTechnology/_sTechnology.pug
+include ../blocks/sTeam/_sTeam.pug 
 include ../blocks/sJoin/_sJoin.pug 
 include ../blocks/sHistory/_sHistory.pug 
 include ../blocks/sForm/_sForm.pug
@@ -40,6 +41,7 @@ block pagecontent
 	//- +sOpportunities.bg-dark.section--vh
 	+sResourceBase.bg-dark.section--vh
 	+sWorkConditions2.bg-white.section--vh
+	+sTeamService.bg-dark.section--vh
 	+sTechnology.bg-white.section--vh
 	+sHistory.bg-dark.section--vh
 	+sService.bg-white
