--- a/sourse/pug/blocks/sNews/_sNews.pug
+++ b/sourse/pug/blocks/sNews/_sNews.pug
@@ -59,7 +59,7 @@ mixin sNewsPressCenter(data)
 					+e.slide.swiper-slide
 						+newItem(`2`,`«Узпромстройбанк» первым внедрит механизмы определения себестоимости продуктов`,`Команда SAPRUN не только внедряет новые системы SAP, но и оперативно сопровождает тысячи пользователей в компаниях по всей стране.`)
 					+e.slide.swiper-slide
-						+b.end-news-card
+						+b.end-news-card(href="#")
 							+e.title Перейти в раздел новости
 							+icon('arrow-right-link')
 				.swiper-scrollbar
@@ -82,7 +82,7 @@ mixin sNewsPublication(data)
 					+publ-item(`Июнь 2022`,`1`,`Сотрудники ИНВИТРО ставят цели и&nbsp;планируют развитие с&nbsp;помощью SAP SuccessFactors`)
 					+publ-item(`Август 2022`,`2`,`Золотая награда SAP QUALITY AWARD 2017`)
 					+b.publ-item.swiper-slide
-						+b.end-news-card
+						+b.end-news-card(href="#")
 							+e.title Перейти в раздел новости
 							+icon('arrow-right-link')
 				.swiper-scrollbar
