sCenterCount-js start

--- a/sourse/pug/blocks/sCenterCount/_sCenterCount.pug
+++ b/sourse/pug/blocks/sCenterCount/_sCenterCount.pug
@@ -26,4 +26,6 @@ mixin sCenterCount(data)
 						.col-auto
 							+e.item-title Мобильная разработка
 					+e.item-caption Корпоративные мобильные приложения для управления операционной деятельностью предприятия (управление ремонтами, закупками, проектами, продажами, торговыми залами, складами и&nbsp;распределительными процессами). Мобильная аналитика, управлени мобильными доступами и&nbsp;устройствами.
+				<canvas id="myChart" ></canvas>
+		include sCenterCount-js.pug
 	// end sCenterCount
