--- a/sourse/pug/blocks/sCenterCount/_sCenterCount.scss
+++ b/sourse/pug/blocks/sCenterCount/_sCenterCount.scss
@@ -28,7 +28,7 @@
 			gap: rem(140) rem(240);
 			justify-content: space-between;
 		}
-		@include media-breakpoint-up(xxl){
+		@include media-breakpoint-up(xxl) {
 			gap: rem(180) rem(380);
 		}
 		flex-direction: column;
@@ -42,7 +42,7 @@
 	}
 	&__item {
 		position: relative;
-		@include media-breakpoint-up(xxl){
+		@include media-breakpoint-up(xxl) {
 			width: calc(50% - rem(280));
 			max-width: calc(50% - rem(280));
 		}
@@ -59,35 +59,35 @@
 			background-color: transparent;
 			border-bottom: 1px solid #525254;
 			left: 5%;
-			@include media-breakpoint-up(lg){
+			@include media-breakpoint-up(lg) {
 				top: rem(16);
 			}
 			// top: rem(70);
 			transform: skew(-40deg);
-			@include media-breakpoint-down(lg){
+			@include media-breakpoint-down(lg) {
 				display: none;
 			}
 		}
-		&--down-left{
-			&::after{
+		&--down-left {
+			&::after {
 				border-right: 1px solid #525254;
 			}
 		}
-		&--up-right{
-			&::after{
+		&--up-right {
+			&::after {
 				border-top: 1px solid #525254;
 				border-left: 1px solid #525254;
 				border-bottom: none;
 				left: auto;
 				right: 5%;
-				@include media-breakpoint-up(lg){
+				@include media-breakpoint-up(lg) {
 					top: rem(60);
 				}
 				// top: rem(120);
 			}
 		}
-		&--down-right{
-			&::after{
+		&--down-right {
+			&::after {
 				border-left: 1px solid #525254;
 				left: auto;
 				right: 5%;
@@ -101,6 +101,11 @@
 		&--order {
 			@include media-breakpoint-up(lg) {
 				order: -1;
+			}
+		}
+		&:hover {
+			.sCenterCount__item-caption {
+				color: $white;
 			}
 		}
 	}
@@ -131,28 +136,29 @@
 		font-size: rem(13);
 		line-height: calc(16 / 13);
 		font-weight: 300;
+		transition-duration: 0.4s;
 	}
-	.title-block{
+	.title-block {
 		pointer-events: none;
-		&::after{
+		&::after {
 			display: none !important;
 		}
 	}
-	&__canvas-wrap{
+	&__canvas-wrap {
 		position: absolute;
-		@include media-breakpoint-up(lg){
+		@include media-breakpoint-up(lg) {
 			top: 50%;
 			left: 50%;
-			transform: translate(-50%,-50%) rotate(30deg);
+			transform: translate(-50%, -50%) rotate(30deg);
 			width: rem(240) !important;
 			height: rem(240) !important;
 		}
-		@include media-breakpoint-up(xxl){
+		@include media-breakpoint-up(xxl) {
 			width: rem(380) !important;
 			height: rem(380) !important;
 		}
 	}
-	canvas{
+	canvas {
 		// position: absolute;
 		// @include media-breakpoint-up(md){
 		// 	top: 50%;
@@ -164,6 +170,11 @@
 		// @include media-breakpoint-up(xxl){
 
 		// }
+	}
+	&__item-inner.hover {
+		.sCenterCount__item-caption {
+			color: $white;
+		}
 	}
 	@include media-breakpoint-up(xl) {
 	}
