--- a/sourse/pug/blocks/sCenterCount/sCenterCount-js.pug
+++ b/sourse/pug/blocks/sCenterCount/sCenterCount-js.pug
@@ -59,12 +59,12 @@ script.
 								if (elements[ 0 ]) { 
 									let index = elements[ 0 ].index;
 									let bar = document.querySelector(".sTeam__bar"); 
-									if (bar) {
-										bar.style.setProperty('--el-index', index);
-									}
-									console.log(`.sTeam__list-item:nth-child(${index + 2}) .sTeam__list-item-inner`);
-									$(`.sTeam__list-item-inner`).removeClass("hover")
-									$(`.sTeam__list-item:nth-child(${index + 2}) .sTeam__list-item-inner`).addClass("hover")
+									//- if (bar) {
+									//- 	bar.style.setProperty('--el-index', index);
+									//- }
+									console.log(`sCenterCount__item:nth-child(${index + 2}) sCenterCount__item-inner`);
+									$(`.sCenterCount__item-inner`).removeClass("hover")
+									$(`.sCenterCount__item:nth-child(${index + 2}) .sCenterCount__item-inner`).addClass("hover")
 									myChart.data.datasets[ 0 ].backgroundColor = charColorsGray; 
 								}
 								else { 
@@ -72,6 +72,25 @@ script.
 								}
 								myChart.update();
 							},
+							//- onHover: function(event,elements) {
+							//- 	$("#myChart").css("cursor", elements[ 0 ] ? "pointer" : "default"); 
+								
+							//- 	if (elements[ 0 ]) { 
+							//- 		let index = elements[ 0 ].index;
+							//- 		let bar = document.querySelector(".sTeam__bar"); 
+							//- 		if (bar) {
+							//- 			bar.style.setProperty('--el-index', index);
+							//- 		}
+							//- 		console.log(`sCenterCount__item:nth-child(${index + 2}) sCenterCount__item-inner`);
+							//- 		$(`.sCenterCount__item-inner`).removeClass("hover")
+							//- 		$(`.sCenterCount__item:nth-child(${index + 2}) .sCenterCount__item-inner`).addClass("hover")
+							//- 		myChart.data.datasets[ 0 ].backgroundColor = charColorsGray; 
+							//- 	}
+							//- 	else { 
+							//- 		myChart.data.datasets[ 0 ].backgroundColor =    charColors; 
+							//- 	}
+							//- 	myChart.update();
+							//- },
 
 						},
 					// tooltip
